src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.dot-background {
  background-position: 0 0;
  background-size: 90px;
  background-attachment: fixed;
  background-image: url("../assets/dot.svg");
}

::selection {
  @apply bg-orange-400/40;
}

